syntax = "proto3";

option go_package = "./;microService";
 
message MicroServiceMsgResponse {
  int64 code = 1;
  string msg = 2;
  bytes data = 3;
}
 
message MicroServiceMsgRequest {
  string url = 1;
  int64 app = 2;
  string signature = 3;
  bytes data = 4;
}
 
service MicroServiceMsgHandler {
  rpc Send(MicroServiceMsgRequest) returns (MicroServiceMsgResponse) {}
}